# JadeAi

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.bluetooth  LICENSE  Makefile  README.md  app.py  build.sh  deploy.sh  docker-compose.profiles.yml  docker-compose.yml  install.sh  install_docker.sh  pyproject.toml  readme.md  readme2.0.md  requirements.txt  requirements_barebone.txt  requirements_frontend.txt  start.sh  structure
backend/: app.py
config/: bluetooth.yaml  deploy.yaml  docker.yaml  hid.yaml  jade-video.yaml  messages_bluetooth_en.json  messages_config_en.json  messages_deploy_en.json  messages_docker_en.json  messages_hid_en.json  messages_portainer_en.json  messages_system_en.json  messages_template_en.json  messages_video_en.json  messages_web_admin_en.json  messages_wifi_en.json  portainer.yaml  system.yaml  template.yaml  video.yaml  web_admin.yaml  wifi.yaml
configs/: hid.yml  models.yml  perception.yml  planner.yml  policy.yml  telemetry.yml
deployment/: bluetooth_hid_setup.sh  hailo_setup.py  package.sh
docs/: API.md  ARCHITECTURE.md  MODELS.md  ROADMAP.md  SAFETY.md  TRAINING.md
frontend/: package 2.json  package-lock.json  package.json
hid'pheriperal/: Dockerfile  Makefile  api_server.py  bluetooth_manager.h  bt_manager.py  command_server.h  hid_server.cpp  key_mapper.h  (+1 more)
services/hid/: CMakeLists.txt  Dockerfile  hid_server.py
services/hid/include/: bluetooth_hid_server.hpp  hid_config.hpp  hid_reports.hpp  http_api.hpp
services/hid/src/: bluetooth_hid_server.cpp  hid_config.cpp  hid_reports.cpp  http_api.cpp  main.cpp
(+102 files in other folders)
